Fix: fixed imports and minor errors